Fix issue with Java 8